--- a/src/app/vet/components/foods/foods.component.html
+++ b/src/app/vet/components/foods/foods.component.html
@@ -21,7 +21,7 @@
                 <div class="card">
                   <button
                    class="card-button"
-                   (click)="metodoPrueba( pet )"
+                   (click)="getFoodsForUserPet( pet )"
                   >
                     {{ pet.nombre }}
                   </button>
