--- a/src/app/staff/components/add-pet/add-pet.component.css
+++ b/src/app/staff/components/add-pet/add-pet.component.css
@@ -39,7 +39,7 @@ h1 {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  max-width: 350px; /* Slightly wider form */
+  max-width: 350px;
   width: 90%;
   padding: 30px;
   background-color: #2c2c2c;
@@ -109,7 +109,7 @@ label {
 }
 
 .submit-button {
-  background-color: #00c853; /* Green for positive action */
+  background-color: #00c853;
   border: none;
   color: #fff;
   padding: 12px 25px;
@@ -158,12 +158,12 @@ label {
 }
 
 .icon {
-  color: #00c853; /* Green for success */
+  color: #00c853;
   font-size: 60px;
 }
 
 .close-btn {
-  background-color: #007bff; /* Blue for action */
+  background-color: #007bff;
   color: #fff;
   border: none;
   padding: 12px 25px;
